@@ -8,6 +8,7 @@ package io.stackgres.cluster.controller;
 import static io.stackgres.common.ClusterControllerProperty.CLUSTER_NAME;
 import static io.stackgres.common.ClusterControllerProperty.CLUSTER_NAMESPACE;
 
+import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.stream.Stream;
@@ -17,7 +18,6 @@ import javax.enterprise.context.Dependent;
 import javax.enterprise.event.Observes;
 import javax.inject.Inject;
 
-import com.google.common.collect.ImmutableList;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.quarkus.runtime.ShutdownEvent;
@@ -127,18 +127,18 @@ public class ClusterControllerReconciliationCycle
   }
 
   @Override
-  protected ImmutableList<HasMetadata> getRequiredResources(
+  protected List<HasMetadata> getRequiredResources(
       StackGresClusterContext context) {
     return ResourceGenerator.<StackGresClusterContext>with(context)
         .of(HasMetadata.class)
         .stream()
-        .collect(ImmutableList.toImmutableList());
+        .toList();
   }
 
   @Override
   protected StackGresClusterContext getContextWithExistingResourcesOnly(
       StackGresClusterContext context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly) {
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly) {
     return ImmutableStackGresClusterContext.copyOf(context)
         .withExistingResources(existingResourcesOnly);
   }
@@ -146,20 +146,20 @@ public class ClusterControllerReconciliationCycle
   @Override
   protected StackGresClusterContext getContextWithExistingAndRequiredResources(
       StackGresClusterContext context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources) {
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources) {
     return ImmutableStackGresClusterContext.copyOf(context)
         .withRequiredResources(requiredResources)
         .withExistingResources(existingResources);
   }
 
   @Override
-  public ImmutableList<StackGresCluster> getExistingContextResources() {
+  public List<StackGresCluster> getExistingContextResources() {
     return clusterFinder.findByNameAndNamespace(
         propertyContext.getString(CLUSTER_NAME),
         propertyContext.getString(CLUSTER_NAMESPACE))
         .stream()
-        .collect(ImmutableList.toImmutableList());
+        .toList();
   }
 
   @Override
@@ -180,7 +180,7 @@ public class ClusterControllerReconciliationCycle
         .cluster(cluster)
         .extensions(Optional.ofNullable(cluster.getSpec())
             .map(StackGresClusterSpec::getToInstallPostgresExtensions)
-            .orElse(ImmutableList.of()))
+            .orElse(List.of()))
         .labels(labelFactory.genericLabels(cluster))
         .build();
   }
