@@ -41,8 +41,8 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
   protected final Reconciliator<T> reconciliator;
   protected final S handlerSelector;
   private final ExecutorService executorService;
-  private final AtomicReference<ImmutableList<Optional<H>>> atomicReference =
-      new AtomicReference<>(ImmutableList.of());
+  private final AtomicReference<List<Optional<H>>> atomicReference =
+      new AtomicReference<>(List.of());
   private final ArrayBlockingQueue<Boolean> arrayBlockingQueue = new ArrayBlockingQueue<>(1);
 
   private final CompletableFuture<Void> stopped = new CompletableFuture<>();
@@ -86,7 +86,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     atomicReference.updateAndGet(atomicExistingContextResources -> Seq
         .seq(atomicExistingContextResources)
         .append(existingContextResources)
-        .collect(ImmutableList.toImmutableList()));
+        .toList());
     arrayBlockingQueue.offer(true);
   }
 
@@ -95,8 +95,8 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     while (true) {
       try {
         arrayBlockingQueue.take();
-        ImmutableList<Optional<H>> existingContextResources =
-            atomicReference.getAndSet(ImmutableList.of());
+        List<Optional<H>> existingContextResources =
+            atomicReference.getAndSet(List.of());
         if (close) {
           break;
         }
@@ -110,28 +110,28 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
   }
 
   public synchronized ReconciliationCycleResult<H> reconciliationCycle(
-      ImmutableList<Optional<H>> requestedContextResources) {
+      List<Optional<H>> requestedContextResources) {
     final ImmutableMap.Builder<H, Exception> contextExceptions = ImmutableMap.builder();
     final int cycleId = reconciliationCount.incrementAndGet();
     final String cycleName = cycleId + "| " + name + " reconciliation cycle";
 
     logger.trace("{} starting", cycleName);
     logger.trace("{} getting existing {} list", cycleName, name.toLowerCase(Locale.US));
-    final ImmutableList<Tuple2<H, Boolean>> contextResources;
+    final List<Tuple2<H, Boolean>> contextResources;
 
     try {
       if (requestedContextResources.stream().anyMatch(Optional::isEmpty)) {
         contextResources = getExistingContextResources()
             .stream()
             .map(existingContextResource -> Tuple.tuple(existingContextResource, false))
-            .collect(ImmutableList.toImmutableList());
+            .toList();
       } else {
         contextResources = Seq.seq(requestedContextResources)
             .map(Optional::get)
             .grouped(this::getRequestedContextResourceKey)
             .flatMap(t -> t.v2.limit(1))
             .map(requestedContextResource -> Tuple.tuple(requestedContextResource, true))
-            .collect(ImmutableList.toImmutableList());
+            .toList();
       }
     } catch (RuntimeException ex) {
       logger.error(cycleName + " failed", ex);
@@ -161,7 +161,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
 
         try {
           logger.trace("{} working on {}", cycleName, contextId);
-          ImmutableList<HasMetadata> existingResourcesOnly = getExistingResources(
+          List<HasMetadata> existingResourcesOnly = getExistingResources(
               client,
               context);
           T contextWithExistingResourcesOnly = getContextWithExistingResourcesOnly(
@@ -170,16 +170,16 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
                   .stream()
                   .map(existingResource -> Tuple.tuple(existingResource,
                       Optional.<HasMetadata>empty()))
-                  .collect(ImmutableList.toImmutableList()));
-          ImmutableList<HasMetadata> requiredResourcesOnly = getRequiredResources(
+                  .toList());
+          List<HasMetadata> requiredResourcesOnly = getRequiredResources(
               contextWithExistingResourcesOnly);
-          ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources =
+          List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources =
               existingResourcesOnly
                   .stream()
                   .map(existingResource -> Tuple.tuple(existingResource,
                       findResourceIn(existingResource, requiredResourcesOnly)))
-                  .collect(ImmutableList.toImmutableList());
-          ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources =
+                  .toList();
+          List<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources =
               requiredResourcesOnly
                   .stream()
                   .map(requiredResource -> Tuple.tuple(requiredResource,
@@ -187,7 +187,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
                           .filter(Optional::isPresent)
                           .orElseGet(
                               () -> handlerSelector.find(client, context, requiredResource))))
-                  .collect(ImmutableList.toImmutableList());
+                  .toList();
           T contextWithExistingAndRequiredResources = getContextWithExistingAndRequiredResources(
               context, requiredResources, existingResources);
           ReconciliationResult<?> reconciliationResult =
@@ -230,7 +230,7 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
     private final ImmutableMap<T, Exception> contextResourceExceptions;
     private final Exception exception;
 
-    public ReconciliationCycleResult(ImmutableList<T> contextResources,
+    public ReconciliationCycleResult(List<T> contextResources,
         ImmutableMap<T, Exception> contextExceptions) {
       this.contextResources = contextResources;
       this.contextResourceExceptions = contextExceptions;
@@ -280,17 +280,17 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
       HasMetadata contextResource, Exception ex);
 
   protected abstract T getContextWithExistingResourcesOnly(T context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly);
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResourcesOnly);
 
-  protected abstract ImmutableList<HasMetadata> getRequiredResources(T context);
+  protected abstract List<HasMetadata> getRequiredResources(T context);
 
   protected abstract T getContextWithExistingAndRequiredResources(
       T context,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
-      ImmutableList<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources);
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> requiredResources,
+      List<Tuple2<HasMetadata, Optional<HasMetadata>>> existingResources);
 
   private Optional<HasMetadata> findResourceIn(HasMetadata resource,
-      ImmutableList<HasMetadata> resources) {
+      List<HasMetadata> resources) {
     return resources
         .stream()
         .filter(otherResource -> resource.getKind()
@@ -302,14 +302,14 @@ public abstract class ReconciliationCycle<T extends ResourceHandlerContext,
         .findAny();
   }
 
-  protected abstract ImmutableList<H> getExistingContextResources();
+  protected abstract List<H> getExistingContextResources();
 
   protected abstract H getExistingContextResource(H contextResource);
 
   protected abstract T getContextFromResource(H contextResource);
 
-  private ImmutableList<HasMetadata> getExistingResources(KubernetesClient client, T context) {
-    return handlerSelector.getResources(client, context).collect(ImmutableList.toImmutableList());
+  private List<HasMetadata> getExistingResources(KubernetesClient client, T context) {
+    return handlerSelector.getResources(client, context).toList();
   }
 
 }
